--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,13 @@
 			<plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.12.3</version>
   <configuration>
     <excludes>
       <exclude>**/*IT.java</exclude>
     </excludes>
+    <parallel>classes</parallel>
+    <threadCount>2</threadCount>
   </configuration>
   <executions>
     <execution>
